tests/negative/gold/incomplete-operator-test.gold
tests/negative/incomplete-operator-test.toit:6:11: error: Missing closing ']'
  operator[
          ^
tests/negative/incomplete-operator-test.toit:6:3: error: Missing body
  operator[
  ^~~~~~~~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/incomplete-operator-test.toit'
Compilation failed
